Modify nav and refactor html pages

--- a/src/main/resources/templates/recipes/recipeList.html
+++ b/src/main/resources/templates/recipes/recipeList.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/2508d31af3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" th:href="@{/css/custom.css}"> <!--link para verlo con chrome enlace css-->
-    <link rel="stylesheet" href="../static/css/custom.css"> <!-- link verlo previsualizador enlace css-->
+    <link rel="stylesheet" href="../../static/css/custom.css"> <!-- link verlo previsualizador enlace css-->
     <title>Recipe List</title>
 </head>
 
