--- a/src/main/resources/templates/users/profileNutritionist.html
+++ b/src/main/resources/templates/users/profileNutritionist.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" th:href="@{/css/custom.css}"> <!--link para verlo con chrome enlace css-->
-    <link rel="stylesheet" href="../static/css/custom.css"> <!-- link verlo previsualizador enlace css-->
+    <link rel="stylesheet" href="../../static/css/custom.css"> <!-- link verlo previsualizador enlace css-->
     <script src="https://kit.fontawesome.com/2508d31af3.js" crossorigin="anonymous"></script>
     <title>Profile</title>
 </head>
@@ -16,49 +16,49 @@
 <div class="container-fluid">
     <main class="content">
         <section class="container-lg border-bottom border-fuente text-center py-4">
-            <h2 class="text-info" th:if="${client.id==T(com.fpmislata.NutriFusionFood.common.Auth).getUser().getId()}"
+            <h2 class="text-info" th:if="${nutritionist.id==T(com.fpmislata.NutriFusionFood.common.Auth).getUser().getId()}"
                 th:text="#{profile.section}">MI PERFIL</h2>
             <div class="row align-items-stretch bg-resalte m-3 p-3">
                 <div class="d-none d-md-block col-md-5 bg-fondo">
-                    <img class="profile-picture" th:src="@{/images/user/}+user_+${client.id}+.png"
+                    <img class="profile-picture" th:src="@{/images/user/}+user_+${nutritionist.id}+.png"
                          alt="imagen perfil">
                 </div>
                 <div class="col-md-7 px-4 py-4 bg-fondo">
                     <div class="container-fluid py-4 align-items-center text-left">
                         <div class="row">
                             <div class="col text-center">
-                                <h2 class="d-none d-lg-block" th:text="${client.username}"></h2>
-                                <h3 class="d-block d-lg-none" th:text="${client.username}"></h3>
+                                <h2 class="d-none d-lg-block" th:text="${nutritionist.username}"></h2>
+                                <h3 class="d-block d-lg-none" th:text="${nutritionist.username}"></h3>
                             </div>
                         </div>
                         <div class="row py-1">
                             <div class="col">
                                 <!-- Texto para pantallas grandes -->
                                 <h3 class="mr-2 text-info d-none d-lg-inline" th:text="#{profile.user.name}">Nombre: </h3>
-                                <h3 class="d-none d-lg-inline" th:text="|${client.name} ${client.surname1} ${client.surname2}|"></h3>
+                                <h3 class="d-none d-lg-inline" th:text="|${nutritionist.name} ${nutritionist.surname1} ${nutritionist.surname2}|"></h3>
                                 <!-- Texto para pantallas pequeñas -->
                                 <p class="d-inline mr-2 text-info d-lg-none" th:text="#{profile.user.name}">Nombre: </p>
-                                <p class="d-inline d-lg-none" th:text="|${client.name} ${client.surname1} ${client.surname2}|"></p>
+                                <p class="d-inline d-lg-none" th:text="|${nutritionist.name} ${nutritionist.surname1} ${nutritionist.surname2}|"></p>
                             </div>
                         </div>
                         <div class="row py-1">
                             <div class="col">
                                 <!-- Texto para pantallas grandes -->
                                 <h3 class="mr-2 text-info d-none d-lg-inline" th:text="#{profile.user.email}">Email: </h3>
-                                <h3 class="d-none d-lg-inline" th:text="${client.email}"></h3>
+                                <h3 class="d-none d-lg-inline" th:text="${nutritionist.email}"></h3>
                                 <!-- Texto para pantallas pequeñas -->
                                 <p class="d-inline mr-2 text-info d-lg-none" th:text="#{profile.user.email}">Email: </p>
-                                <p class="d-inline d-lg-none" th:text="${client.email}"></p>
+                                <p class="d-inline d-lg-none" th:text="${nutritionist.email}"></p>
                             </div>
                         </div>
                         <div class="row py-1">
                             <div class="col">
                                 <!-- Texto para pantallas grandes -->
                                 <h3 class="mr-2 text-info d-none d-lg-inline" th:text="#{profile.user.birthdate}">Fecha de nacimiento: </h3>
-                                <h3 class="d-none d-lg-inline" th:text="${client.birthDate}"></h3>
+                                <h3 class="d-none d-lg-inline" th:text="${nutritionist.birthDate}"></h3>
                                 <!-- Texto para pantallas pequeñas -->
                                 <p class="d-inline mr-2 text-info d-lg-none" th:text="#{profile.user.birthdate}">Fecha de nacimiento: </p>
-                                <p class="d-inline d-lg-none" th:text="${client.birthDate}"></p>
+                                <p class="d-inline d-lg-none" th:text="${nutritionist.birthDate}"></p>
                             </div>
                         </div>
                     </div>
@@ -67,7 +67,6 @@
         </section>
         <section class="container-lg border-bottom border-fuente text-center py-4">
             <h2 class="text-info" th:text="#{profile.user.favourite.recipe}">RECETAS FAVORITAS</h2>
-            <!-- Falta añadir el listado de recetas favoritas  -->
             <div class="container-fluid">
                 <div class="row justify-content-center">
                     <div class="col-12 col-md-6 col-xl-4 p-2" th:each="recipe :${favorites}">
@@ -77,6 +76,40 @@
                         <a th:href="@{${'/recipes/' + recipe.id}}">
                             <h2 class="d-inline-block ml-2 text-uppercase" th:text="${recipe.name}"></h2>
                         </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="container-lg text-center pt-4 pb-2">
+            <h2 class="text-info" th:text="#{profile.user.recipes}">MIS RECETAS</h2>
+            <div class="container-fluid">
+                <div class="row justify-content-center">
+                    <div class="col-12 col-md-6 col-xl-4 p-2" th:each="recipe :${recipeList}">
+                                <img class="recipe-profile pb-3 rounded "
+                                     th:src="@{/images/recipe/} + recipe_ + ${recipe.id} + .jpeg">
+                            <!--boton de editar receta-->
+                            <a th:href="@{${'/recipes/' + recipe.id}}">
+                                <h2 class="d-inline-block ml-2 text-uppercase" th:text="${recipe.name}"></h2>
+                            </a>
+                            <div class="bg-resalte p-1" th:if="${nutritionist.id==T(com.fpmislata.NutriFusionFood.common.Auth).getUser().getId()}">
+                                <div class=" pt-2 border border-fondo bw-5 bg-resalte ">
+                                    <a th:href="@{${'/recipes/edit/'+recipe.id}}">
+                                        <h5 class="text-fondo" th:text="#{profile.user.buttom.edit}">EDITAR</h5>
+                                    </a>
+                                </div>
+                            </div>
+                    </div>
+                </div>
+                <!--boton para añadir nueva receta-->
+                <div class="row justify-content-center my-3"
+                     th:if="${nutritionist.id==T(com.fpmislata.NutriFusionFood.common.Auth).getUser().getId()}">
+                    <div class="col-8 bg-info p-1">
+                        <div class="col-12 bg-info py-2 border border-fondo bw-5">
+                            <a href="/recipes/add">
+                                <h2 class="text-fondo d-none d-sm-inline" th:text="#{profile.user.buttom.create}">CREAR UNA NUEVA RECETA</h2>
+                                <h3 class="text-fondo d-inline d-sm-none" th:text="#{profile.user.buttom.create}">CREAR UNA NUEVA RECETA</h3>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
