--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -64,6 +64,10 @@
                                                th:text="#{menu.dropdown5}">Snack</a></li>
                                     </ul>
                                 </li>
+                                <li class="nav-item border-top border-fuente">
+                                    <a th:href="@{'/recipes/filters'+ '?lang=' + ${#locale.language}}" class="nav-link active"
+                                       th:text="#{menu.filter}">FILTROS</a>
+                                </li>
                                 <li th:if="${@authService.getCurrentUserId() != null}"
                                     class="nav-item border-top border-fuente"><a
                                         th:href="@{'/users/'+${@authService.getCurrentUserId()} + '?lang=' + ${#locale.language}}"
